--- a/calculadoraSimplesUmaLinhaCodigo.ipynb
+++ b/calculadoraSimplesUmaLinhaCodigo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOP6sp9n1SaMrG3K6Gkk34H",
+      "authorship_tag": "ABX9TyP5jhWMcQVT4ZJ4PQccdBN3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -118,7 +118,11 @@
         "segundo_numero = float(input('Insira o segundo numero: '))\n",
         "operador = input('Seleciona uma operacao (+, -, *, /): ')\n",
         "\n",
-        "calculadora_simples = lambda x, y, operador: (lambda f: f(x, y))(lambda a, b: a + b if operador == '+' else (a - b if operador == '-' else (a * b if operador == '*' else (a / b if operador == '/' else 'Operação inválida'))))\n",
+        "calculadora_simples = lambda x, y, operador: (lambda f: f(x, y))(lambda a, b: a + b if operador == '+'\n",
+        "                                                                 else (a - b if operador == '-'\n",
+        "                                                                       else (a * b if operador == '*'\n",
+        "                                                                             else (a / b if operador == '/'\n",
+        "                                                                                   else 'Operação inválida'))))\n",
         "resultado = calculadora_simples(primeiro_numero, segundo_numero, operador)\n",
         "print(f'{resultado:.2f}')"
       ],
@@ -127,9 +131,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y_qhAFcUXhMe",
-        "outputId": "a7597fe7-a871-4a8e-a40d-8a6ea4efec86"
+        "outputId": "12e5fb59-273f-45c2-a7d2-64f855a4c775"
       },
-      "execution_count": 19,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
